fix: text align in ebook.css

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -47,5 +47,4 @@ section {
 
 .section-subtitle {
     font-size: 2.1875rem;
-    text-align: center;
 }
